--- a/asi/index.html
+++ b/asi/index.html
@@ -141,6 +141,8 @@
       flex-direction: column;
       background: #1a1a2e;
       border-left: 1px solid #0f3460;
+      min-height: 0; /* Allow flex children to scroll */
+      overflow: hidden;
     }
     /* Chat Section */
     #chat-section {
@@ -148,6 +150,8 @@
       display: flex;
       flex-direction: column;
       border-bottom: 1px solid #0f3460;
+      min-height: 0; /* Critical for flex child scrolling */
+      overflow: hidden;
     }
     #chat-header {
       padding: 10px 15px;
@@ -163,6 +167,7 @@
       display: flex;
       flex-direction: column;
       gap: 8px;
+      min-height: 0; /* Allow shrinking for scroll */
     }
     .chat-msg {
       max-width: 85%;
@@ -193,6 +198,35 @@
       padding: 10px;
       gap: 8px;
       background: #16213e;
+    }
+    #chat-buttons {
+      display: flex;
+      gap: 6px;
+      padding: 0 10px 10px;
+      background: #16213e;
+      flex-wrap: wrap;
+    }
+    .chat-btn {
+      padding: 5px 10px;
+      background: #0f3460;
+      color: #aaa;
+      border: 1px solid #1a4a7a;
+      border-radius: 12px;
+      font-size: 11px;
+      cursor: pointer;
+      transition: all 0.2s;
+    }
+    .chat-btn:hover {
+      background: #1a4a7a;
+      color: #fff;
+    }
+    .chat-btn.primary {
+      background: #00d9ff22;
+      border-color: #00d9ff;
+      color: #00d9ff;
+    }
+    .chat-btn.primary:hover {
+      background: #00d9ff44;
     }
     #chat-input {
       flex: 1;
@@ -290,6 +324,13 @@
         <div id="chat-input-container">
           <input type="text" id="chat-input" placeholder="Type a message..." autocomplete="off">
           <button id="chat-send">Send</button>
+        </div>
+        <div id="chat-buttons">
+          <button class="chat-btn primary" data-cmd="/ask">🤔 Ask</button>
+          <button class="chat-btn" data-cmd="/lexicon">📖 Words</button>
+          <button class="chat-btn" data-cmd="/emotions">💭 Feels</button>
+          <button class="chat-btn" data-cmd="/understood">📋 Graph</button>
+          <button class="chat-btn" data-cmd="/help">❓</button>
         </div>
       </div>
       
